회원가입 api 연결

--- a/src/App.css
+++ b/src/App.css
@@ -95,3 +95,9 @@
 .eye-light-on-icon{
   background-image: url(image/eye-light-on.png);
 }
+.check-ring-light-icon{
+  background-image: url(image/check-ring-light.png);
+}
+.check-round-fill-icon{
+  background-image: url(image/check-round-fill.png);
+}
