--- a/src/views/Auth/style.css
+++ b/src/views/Auth/style.css
@@ -12,7 +12,7 @@
 
 .auth-container{
     width: 1400px;
-    height: 80%;
+    height: 90%;
 
     display: flex;
     justify-content: center;
@@ -41,7 +41,7 @@
 .auth-card-top{
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 20px;
 
 }
 
@@ -53,7 +53,7 @@
 .auth-card-title{
     color: rgba(0,0,0,1);
 
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 600;
     line-height: 140%;
 }
@@ -139,4 +139,46 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 140%;
+}
+
+.auth-jumbotron-box{
+    grid-column: 1 / 2;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.auth-jumbotron-contents{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.auth-logo-icon{
+    width: 50px;
+    height: 50px;
+
+    background-image: url(C:\dev\GetCouponFrontend\get-coupon-front\src\image\coupon.png);
+    background-position: 50% 50%;
+    background-size: 100% 100%;
+}
+
+.auth-jumbotron-text-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+}
+
+.auth-jumbotron-text{
+    color: rgba(255, 255, 255, 1);
+
+    font-family: 'GimhaeGaya';
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 140%;
+    letter-spacing: -1.2px;
+    text-align: center;
 }
