Main 뷰의 쿠폰 리스트 구현현

--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,6 @@
 .check-round-fill-icon{
   background-image: url(image/check-round-fill.png);
 }
+.default-coupon-icon{
+  background-image: url(image/default-coupon.jpeg);
+}
