--- a/src/views/Main/style.css
+++ b/src/views/Main/style.css
@@ -6,3 +6,48 @@
     background-color: #121212; /* 어두운 배경 */
     color: #ffffff; /* 텍스트 색상 */
 }
+
+.main-top-container{
+    width: 1200px;
+    min-width: 1200px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 56px;
+}
+
+.main-top-title{
+    color: rgba(255,255,255,1);
+
+    text-align: center;
+    font-family: GimhaeGaya;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 140%;
+    letter-spacing: -0.8px;
+
+    white-space: pre-wrap;
+}
+
+.main-top-contents-box{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
+
+.main-top-contents-title{
+    color: rgba(255,255,255,1);
+
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 140%;
+}
+
+.main-top-contents{
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+}
