--- a/src/components/CouponItem/style.css
+++ b/src/components/CouponItem/style.css
@@ -28,7 +28,10 @@
 
 .coupon-list-item-image-box {
     width: 100%;
-    height: 100%;
+    height: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
 }
 
